part-3/step-20/namespace-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  resourceVersion: "144"
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
