part-3/step-20/ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: cloudnative-dotnext-web.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /(.*)
